Changed clock text color to white because I couldn't easily read it on the background when it was black.

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -116,7 +116,7 @@ window#waybar.hidden {
     border: solid 2px;
     border-color: #000000;
     transition: none;
-    color: #000000;
+    color: #ffffff;
     background: #474036;
 }
 
